--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "postcss-loader": "^3.0.0",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
