--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "downlevelIteration": true
   }
 }
